--- a/Reggie.Blog/Views/Shared/_Layout.cshtml
+++ b/Reggie.Blog/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -24,14 +24,13 @@
         <link href="~/css/font-awesome.min.css?v=4.4.0" rel="stylesheet" asp-append-version="true">
         <link rel="stylesheet" href="~/css/plugins/summernote/summernote.min.css" asp-append-version="true" />
         <link rel="stylesheet" href="~/css/plugins/summernote/summernote-bs3.min.css" asp-append-version="true" />
-
     </environment>
 </head>
 <body>
         <nav id="navbar" class="navbar navbar-inverse" role="navigation">
             <div class=" container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <button type="button" class="navbar-toggle sr-only" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
