--- a/Reggie.Blog/wwwroot/css/site.css
+++ b/Reggie.Blog/wwwroot/css/site.css
@@ -15,10 +15,13 @@
 .body-content {}
 
 #navbar {
-    border-radius: 0;
-    background: #000;
-    border: 0 none transparent;
-    border-width: 0px;
+    position: fixed;
+    z-index: 1;
+    margin-top: 20px;
+    width: 100%;
+    background: transparent;
+    border-width:0px;
+    border-radius:0px;
 }
 
 .navbar-brand {
@@ -58,9 +61,9 @@
 
 .poster {
     background: #000;
-    height: 240px;
     margin-top: -20px;
-    padding: 60px 0px;
+    padding: 20px 0px;
+    height: 340px;
     color: #fff;
     position: relative;
     font-size: 14px;
@@ -74,6 +77,15 @@
     margin-top: 10px;
 }
 
+    .poster img {
+        position: absolute;
+        float: left;
+        left:0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+    }
+
 .ibox-content {
     margin-top: 12px;
 }
@@ -82,6 +94,10 @@
     color: #fff;
     height: 1px;
     min-width: 20px;
+}
+
+.container {
+    background: transparent;
 }
 
 
