--- a/Reggie.Blog/Views/Home/CreateInformalEssay.cshtml
+++ b/Reggie.Blog/Views/Home/CreateInformalEssay.cshtml
@@ -25,11 +25,11 @@
                 <div class="summernote form-control"></div>
                 <span asp-validation-for="Message" class="text-danger"></span>
             </div>
-            <div class="form-group sr-only">
+            @*<div class="form-group sr-only">
                 <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" value="langdexuming"/>
+                <input asp-for="UserName" class="form-control" value=""/>
                 <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
+            </div>*@
             @*<div class="form-group">
                     <label asp-for="CreateDateTime" class="control-label"></label>
                     <input asp-for="CreateDateTime" class="form-control" />
