--- a/Reggie.Blog/Views/InformalEssays/Create.cshtml
+++ b/Reggie.Blog/Views/InformalEssays/Create.cshtml
@@ -28,11 +28,11 @@
                 <div class="summernote form-control"></div>
                 <span asp-validation-for="Message" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
+            </div>*@
             @*<div class="form-group">
                 <label asp-for="CreateDateTime" class="control-label"></label>
                 <input asp-for="CreateDateTime" class="form-control" />
