--- a/Reggie.Blog/Views/Shared/_IndexSideBarPartial.cshtml
+++ b/Reggie.Blog/Views/Shared/_IndexSideBarPartial.cshtml
@@ -11,30 +11,27 @@
     }
 
     #indexSideBar .popular-tags {
-        background: transparent;
+        background: #fff;
         box-sizing: border-box;
         box-shadow: 0 1px 12px rgba(0, 0, 0, .1);
         border-radius: 2px;
-        padding: 3px 6px
     }
 
-    .tag {
-        font-size: 14px;
-        line-height: 24px;
-        background: #eaeaea;
-        padding: 6px 8px;
-        border-radius: 6px;
-        float: left;
-        max-width: 128px;
-        position: relative;
-        margin: 6px 12px 6px 0px;
-        cursor: pointer;
-        opacity: 0.8;
-    }
+        .tag {
+            font-size: 14px;
+            line-height: 24px;
+            background: #eaeaea;
+            padding: 6px 8px;
+            border-radius: 6px;
+            float: left;
+            max-width: 128px;
+            position: relative;
+            margin: 6px 12px 6px 0px;
+            opacity: 0.8;
+        }
     
     .tag:hover {
             opacity: 1;
-            text-decoration: underline;
         }
 
     .statistical-chart {
